--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,7 @@
     "@types/cookie": "^0.5.1",
     "axios": "^0.27.2",
     "cookie": "^0.5.0",
-    "next": "12.2.5",
-    "next-redux-wrapper": "^8.0.0-rc.1",
+    "next-redux-wrapper": "^8.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.2",
@@ -23,11 +22,11 @@
     "sass": "^1.54.8"
   },
   "devDependencies": {
-    "@types/node": "18.7.14",
-    "@types/react": "18.0.18",
+    "@types/node": "18.7.17",
+    "@types/react": "18.0.19",
     "@types/react-dom": "18.0.6",
     "eslint": "8.23.0",
     "eslint-config-next": "12.2.5",
-    "typescript": "4.8.2"
+    "typescript": "4.8.3"
   }
 }
