--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@types/cookie": "^0.5.1",
     "axios": "^0.27.2",
     "cookie": "^0.5.0",
+    "cross-env": "^7.0.3",
     "next-redux-wrapper": "^8.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
